--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,8 @@
 .percursoAcademicoDiv{
     width: 90%;
     padding: 30px;
-    height: 337px;
+    height: auto;
+    min-height: 337px;
     background: rgb(247, 247, 247);
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.02);
     border-radius: 30px;
@@ -70,9 +71,19 @@
 .rowBackImage{
     position: absolute;
     bottom: 65px !important;
-    left: 60px;
-    right: 60px;
+    left: 30px;
+    right: 30px;
 }
+
+@media only screen and (max-width: 600px) {
+    h3 {
+      font-size: 20px !important;
+    }
+
+    .mainLogoMenu img {
+        width: 200px;
+    }
+  }
 
 .whiteText{
     color: white;
@@ -108,7 +119,7 @@
     text-align: center;
 }
 
-video{
+iframe{
     width: 100%;
     max-width: 800px;
 }
